apps/portfolio/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio
        image: xmotech/portfolio:v1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
        resources:
          limits:
            cpu: 500m
            memory: 384Mi
          requests:
            cpu: 100m
            memory: 128Mi
