apps/portfolio/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4000
  selector:
    app: portfolio
